qs
4-8 优化